# PassiveRadarChain

./: .gitignore  README.md  environment.yml
examples/: demo_chain.py  demo_full_chain_no_changes.py  demo_inspect_state_and_configs.py  demo_load_config_files.py  demo_partial_chain_and_reconfigure.py  demo_save_reload_roundtrip.py  example_common.py
pr_pkg/: pyproject.toml
pr_pkg/examples/: demo_chain.py  demo_load_state_and_show_results.py  demo_real_data_inputs.py  example_common.py
pr_pkg/simulated_data/configs/: config_20260309_202143.json  config_20260309_202911.json
pr_pkg/simulated_data/states/: state_20260309_202143.json
pr_pkg/src/pr_chain/: __init__.py  utils.py
pr_pkg/src/pr_chain/core/: __init__.py  chain.py  configs.py
pr_pkg/src/pr_chain/generators/: clutter_gen.py  echo_gen.py
pr_pkg/src/pr_chain/processing/: __init__.py  apply_noise_and_channel.py  apply_w.py  caf_computation.py  cfar.py
pr_pkg/src/pr_chain/utils/: constants.py  math.py
scripts/: config_comparison.py  gen_signals.py  graphs.py  test.py
sims/: test.ipynb
src/pr_chain/: __init__.py
src/pr_chain/core/: chain.py  configs.py
src/pr_chain/generators/: __init__.py  clutter_gen.py  echo_gen.py
src/pr_chain/processing/: __init__.py  apply_noise_and_channel.py  apply_w.py  caf_computation.py  cfar.py  clutter_filer.py
src/pr_chain/utils/: __init__.py  plotting.py
